--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/dialogs/pending-send-update-dialog/pending-send-update-dialog.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/dialogs/pending-send-update-dialog/pending-send-update-dialog.component.scss
@@ -98,7 +98,55 @@ h3 {
   }
   gap: 3em;
   margin-bottom: 2em;
-  .delete-button {
+  .delete--button {
     margin-bottom: 12px;
+  }
+}
+
+.file--upload__wrapper {
+  margin: 3em 0 1em 0;
+  display: flex;
+  flex-wrap: wrap;
+
+  .file--upload--card {
+    &:nth-child(3) {
+      margin-top: 2em;
+    }
+    min-width: 50%;
+    &__title {
+      display: flex;
+      align-items: center;
+      p {
+        &:first-child {
+          font-size: 16px;
+          color: #666666;
+          margin-right: 1em;
+          font-weight: 700;
+        }
+
+        &:nth-child(2) {
+          font-size: 10px;
+          color: #979797;
+        }
+      }
+    }
+    &__files {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 10px;
+      p {
+        margin: 0;
+        color: #0064ea;
+      }
+    }
+  }
+}
+
+.main--form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  mat-form-field {
+    margin: 0.5em 0;
   }
 }
