--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.scss
@@ -72,6 +72,7 @@ td {
 
 .budget--status__bubble {
   @mixin statusBubble {
+    width: 120px;
     margin: 0.5em 0;
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
