:construction: save budget changes

--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/dialogs/pending-send-update-dialog/pending-send-update-dialog.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/dialogs/pending-send-update-dialog/pending-send-update-dialog.component.html
@@ -9,6 +9,10 @@
       <mat-icon>clear</mat-icon>
     </div>
   </h2>
+  <mat-progress-bar
+    mode="indeterminate"
+    *ngIf="loading$ | async"
+  ></mat-progress-bar>
   <mat-divider></mat-divider>
 
   <mat-dialog-content>
