pending approval , corrected

--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
@@ -200,8 +200,8 @@
                   Aprobar PPTO
                 </button>
                                 <button *ngIf="element.statusPresupuesto != 'CLIENTE INTERNO'" class="w3-small" mat-menu-item (click)="timelineDialog(element)">
-                  <mat-icon>timeline</mat-icon>
-                  Historial
+                  <mat-icon>edit</mat-icon>
+                  Modificar
                 </button>
                                 <button class="w3-small" mat-menu-item (click)="deleteDialog(element)">
                   <mat-icon>delete</mat-icon>
