--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
@@ -199,7 +199,7 @@
                   <mat-icon>check</mat-icon>
                   Aprobar PPTO
                 </button>
-                                <button *ngIf="element.statusPresupuesto != 'CLIENTE INTERNO'" class="w3-small" mat-menu-item (click)="timelineDialog(element)">
+                                <button *ngIf="element.statusPresupuesto != 'CLIENTE INTERNO'" class="w3-small" mat-menu-item (click)="modifyDialog(element)">
                   <mat-icon>edit</mat-icon>
                   Modificar
                 </button>
