--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.html
@@ -1,38 +1,79 @@
 <div class="container">
-  <h2 mat-dialog-title class="card">
-    <div class="modify-title" mat-dialog-close>
-      <mat-icon mat-list-icon>edit</mat-icon>
-    </div>
-    Modificar Presupuesto
-    <span class="ms-fill"></span>
-    <div mat-dialog-close class="modify-title--close">
-      <mat-icon>clear</mat-icon>
-    </div>
-  </h2>
-  <mat-divider></mat-divider>
-  <br />
+    <h2 mat-dialog-title class="card">
+        <div class="modify-title" mat-dialog-close>
+            <mat-icon mat-list-icon>edit</mat-icon>
+        </div>
+        Modificar Presupuesto
+        <span class="ms-fill"></span>
+        <div mat-dialog-close class="modify-title--close">
+            <mat-icon>clear</mat-icon>
+        </div>
+    </h2>
+    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+    <mat-divider></mat-divider>
+    <br />
 
-  <mat-dialog-content>
-    <div class="main--wrapper">
-      <div class="main--form">
-        <mat-form-field appearance="outline">
-          <mat-label>Motivo</mat-label>
-          <input
-            matInput
-            type="text"
-            [formControl]="modificationReasonControl"
-            [matAutocomplete]="autoModify"
-          />
-          <mat-autocomplete
-            #autoModify="matAutocomplete"
-            [displayWith]="showModification"
-          >
-            <mat-option *ngFor="let option of modificationReasonList | async">
-              {{ option.name }}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-      </div>
-    </div>
-  </mat-dialog-content>
+    <mat-dialog-content>
+        <form [formGroup]="additionalFiles">
+            <div class="main--wrapper">
+                <div class="main--form">
+                    <mat-form-field appearance="outline">
+
+                        <mat-label>Motivo</mat-label>
+
+                        <input matInput type="text" [formControl]="modificationReasonControl" [matAutocomplete]="autoModify" />
+
+                        <mat-autocomplete #autoModify="matAutocomplete" [displayWith]="showModification">
+
+                            <mat-option *ngFor="let option of modificationReasonList | async" [value]="option">
+                                {{ option.name }}
+                            </mat-option>
+
+                        </mat-autocomplete>
+
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <h3> Modificados </h3>
+
+            <div formArrayName="additionals">
+                <div *ngFor="let additional of additionalForms.controls; let i = index" [formGroupName]="i">
+                    <div class="additional--budget__wrapper">
+                        <p>PPTO</p>
+                        <mat-form-field appearance="outline">
+                            <mat-label>Tipo de atención</mat-label>
+                            <mat-select formControlName="type">
+                                <mat-option *ngFor="let options of additionalsDropDownOptions" [value]="options.value">
+                                    {{ options.viewValue }}
+                                </mat-option>
+                            </mat-select>
+                            <mat-hint>Campo obligatorio</mat-hint>
+                        </mat-form-field>
+                        <mat-form-field appearance="outline">
+                            <mat-label>Observación</mat-label>
+                            <input formControlName="typeObs" matInput placeholder="Observación">
+                            <mat-hint>Campo Opcional</mat-hint>
+                        </mat-form-field>
+                        <button (click)="deleteAdditional(i)" matTooltip="Eliminar adicional" matTooltipPosition="right" color="warn" mat-icon-button class="delete--button">  
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                    </div>
+                </div>
+            </div>
+            <button (click)="addAdditional()" mat-button class="btn-add">
+            <mat-icon>add</mat-icon>    
+            ADICIONALES
+        </button>
+            <mat-dialog-actions align="end">
+                <button type="button" mat-stroked-button color="warn" mat-dialog-close>
+                CERRAR
+            </button>
+                <button (click)="saveChanges()" type="submit" mat-raised-button color="primary">
+             GUARDAR
+            </button>
+            </mat-dialog-actions>
+        </form>
+    </mat-dialog-content>
+
 </div>
