--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.scss
@@ -12,6 +12,15 @@ h2 {
     margin: 1em 0;
 }
 
+h3 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    color: #000000;
+    margin: 1em 0;
+}
+
 .card {
     display: flex;
     padding-bottom: 0px;
@@ -67,4 +76,29 @@ p {
 .modify-title {
     margin-top: 5px;
     margin-right: 15px;
+}
+
+.additional--budget__wrapper {
+    display: flex;
+    align-items: center;
+    p {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        text-align: center;
+        color: #2b2b2b;
+    }
+    gap: 3em;
+    margin-bottom: 2em;
+    .delete--button {
+        margin-bottom: 12px;
+    }
+}
+
+.btn-add {
+    border: 1px #6200ee solid;
+    color: #6200ee;
+    background-color: white;
+    padding: 0px 20px 0px 20px;
 }
