--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.scss
@@ -26,6 +26,11 @@
   margin-right: 12px;
 }
 
+.matMenu{
+  height:203x;
+  weight: 173x;
+}
+
 .download {
   margin-left: 5px;
   height: 45px !important;
