--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.html
@@ -69,7 +69,7 @@
             <mat-form-field appearance="outline">
               <mat-label>Observación</mat-label>
               <input
-                formControlName="typeObs"
+                formControlName="observations"
                 matInput
                 placeholder="Observación"
               />
