--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
@@ -201,7 +201,7 @@
                 </button>
                                 <button *ngIf="element.statusPresupuesto != 'CLIENTE INTERNO'" class="w3-small" mat-menu-item (click)="modifyDialog(element)">
                   <mat-icon>edit</mat-icon>
-                  Modificar
+                  Modificar PPTO
                 </button>
                 <button class="w3-small" mat-menu-item >
                   <mat-icon>highlight_off</mat-icon>
