--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/dialogs/pending-send-update-dialog/pending-send-update-dialog.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/dialogs/pending-send-update-dialog/pending-send-update-dialog.component.html
@@ -1,14 +1,13 @@
 <div class="container">
-  <h2 mat-dialog-title class="card">
-    <div class="card--title" mat-dialog-close>
-      <mat-icon mat-list-icon>create</mat-icon>
-    </div>
-    Actualizar PPTO.
+  <div class="ms-dialog-header">
+    <mat-icon class="ms-dialog-header__icon">create</mat-icon>
+    <h3 class="ms-dialog-header__title">Actualizar PPTO</h3>
     <span class="ms-fill"></span>
-    <div mat-dialog-close class="card--title__close--button">
-      <mat-icon>clear</mat-icon>
-    </div>
-  </h2>
+    <button mat-icon-button mat-dialog-close>
+      <mat-icon>cancel</mat-icon>
+    </button>
+  </div>
+
   <mat-progress-bar
     mode="indeterminate"
     *ngIf="loading$ | async"
