--- a/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-send-dialog/budgets-summary-send-dialog.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-send-dialog/budgets-summary-send-dialog.component.html
@@ -1,14 +1,12 @@
 <div class="container">
-  <h2 mat-dialog-title class="card">
-    <div class="card--title" mat-dialog-close>
-      <mat-icon mat-list-icon>attach_email</mat-icon>
-    </div>
-    Enviar PPTO.
+  <div class="ms-dialog-header">
+    <mat-icon class="ms-dialog-header__icon">attach_email</mat-icon>
+    <h3 class="ms-dialog-header__title">Enviar PPTO.</h3>
     <span class="ms-fill"></span>
-    <div mat-dialog-close class="card--title__close--button">
+    <button mat-icon-button mat-dialog-close>
       <mat-icon>clear</mat-icon>
-    </div>
-  </h2>
+    </button>
+  </div>
   <mat-divider></mat-divider>
 
   <mat-dialog-content>
