--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
@@ -203,11 +203,11 @@
                   <mat-icon>edit</mat-icon>
                   Modificar PPTO
                 </button>
-                <button class="w3-small" mat-menu-item >
+                                <button class="w3-small" mat-menu-item (click)="rejectionDialog(element)">
                   <mat-icon>highlight_off</mat-icon>
                  Rechazar PPTO
                 </button>
-                 <button class="w3-small" mat-menu-item >
+                                <button class="w3-small" mat-menu-item>
                   <mat-icon>timeline</mat-icon>
                  Historial
                 </button>
