--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.scss
@@ -4,11 +4,12 @@
 }
 
 h2 {
-    font-family: Roboto;
+    font-family: Poppins;
     font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    color: #000000;
+    font-weight: 700;
+    font-size: 18px;
+    color: #2B2B2BDE;
+    line-height: 27px;
     margin: 1em 0;
 }
 
