:hammer: fixed aprove

--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-modify/budgets-pending-modify.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 mat-dialog-title class="card">
-        <div class="modify-title" mat-dialog-close>
+        <div class="history-title" mat-dialog-close>
             <mat-icon mat-list-icon>edit</mat-icon>
         </div>
         Modificar Presupuesto
